attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -20,9 +20,14 @@
     right: 0;
     max-width: 100%;
     div{
-        padding: 0 !important;
-        margin: 0 !important;
         display: block !important;
+        position: fixed;
+        padding: 0;
+        margin: 0;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
     }
 }
 .titles{
